<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/blue"
    app:cardCornerRadius="25dp"
    android:layout_marginBottom="16dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:src="@drawable/inf"
            android:layout_marginStart="8dp"
            app:shapeAppearanceOverlay="@style/roundImageview">

        </com.google.android.material.imageview.ShapeableImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:orientation="vertical">

            <TextView
                android:id="@+id/car_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name_car"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:layout_marginBottom="4dp"
                android:layout_marginTop="4dp"
                android:textSize="24sp">

            </TextView>

            <TextView
                android:id="@+id/car_brand"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/car_brand"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

            <TextView
                android:id="@+id/car_model"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:text="@string/car_model"
                android:textStyle="bold"
                android:textColor="@color/white"
                android:textSize="16sp">

            </TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:gravity="center"
                android:layout_marginEnd="4dp"
                android:layout_marginStart="4dp"
                >

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/edit_icon"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:src="@drawable/edit_icon"
                    android:background="@color/white"
                    app:shapeAppearanceOverlay="@style/roundImageview02"
                    >

                </com.google.android.material.imageview.ShapeableImageView>

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/delete_icon"
                    android:layout_width="0dp"
                    android:layout_height="35dp"
                    android:layout_weight="1"
                    android:padding="2dp"
                    android:src="@drawable/ic_delete"
                    android:background="@color/white"
                    app:shapeAppearanceOverlay="@style/roundImageview02"
                    >

                </com.google.android.material.imageview.ShapeableImageView>

            </LinearLayout>




        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.cardview.widget.CardView>